--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,43 +1,41 @@
+<!-- Navigation -->
+<nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+      </button>
+      <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+    </div>
 
-
-    <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Starbucks Recipes</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">스타벅스 레시피 구경</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="hidden">
+          <a href="#page-top"></a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#services">Services</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#portfolio">Portfolio</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#about">About</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#team">Team</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
 
     <!-- Header -->
     <header>
@@ -106,11 +104,51 @@
                 <label for="input_title">작성자</label>
                 <input name="user_name" type="text" class="form-control" placeholder="이름">
               </div>
-             
-           <%= @ing1 %>
-           
-     
             
+            <div class="form=group">
+            <label>커피</label>
+            <select class="selectpicker">
+             <% @ing1.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </br>
+            <label>시럽</label>
+            <select class="selectpicker"> 
+             <% @ing2.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </br>
+            <label>우유</label>
+            <select class="selectpicker">
+             <% @ing3.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </br>
+            <label>휘핑</label>
+            <select class="selectpicker">
+             <% @ing4.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </br>
+            <label>자바칩</label>
+            <select class="selectpicker">
+             <% @ing5.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </br>
+            <label>드리즐</label>
+            <select class="selectpicker">
+             <% @ing6.each do |x| %>
+             <option><%= x.ingredient_name %></option>
+             <% end %>
+            </select>
+            </div>
+            </br>
             <select name="star_rating" id="star_rating" data-current-rating="1" display="" >
               <option value="1">1</option>
               <option value="2">2</option>
@@ -745,5 +783,4 @@
             }
       });
    });
-   
 </script>
